--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ padding: 20px 10% 20px 10%;
 background-color: #393e46;
 margin: 0px;
 padding: 20px 10% 20px 10%;
-color: eee;
+color: #eee;
 }
 
 
@@ -161,7 +161,41 @@ background-color: #fd7014;
 
 /* trabalhando na aba atual / arquivo temporário */
 .emConstrucao {
-background-color: #22222222;
+background-color: #fd7014;
 margin: 0px;
 padding: 0px;
+width: 100%;
+height: 600px;
+}
+
+.tituloConteiner {
+padding-top: 20px;
+color: white;
+}
+
+.conteiner {
+	border-radius: 15px;
+	background-color: rgba(0, 0, 0, 0.8);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.campos {
+padding-bottom: 20px;
+text-align: right;
+}
+
+.conteudo {
+margin: 0px;
+align-items: center;
+text-align: center;
+padding: 20px;
+vertical-align: center;
+color: white;
+}
+
+input {
+	height: 30px;
 }
