--- a/style.css
+++ b/style.css
@@ -17,161 +17,133 @@
 **********************************************/
 
 html {
-padding: 0x;
-margin: 0px;
+	padding: 0x;
+	margin: 0px;
 }
 
 body {
-padding: 0px;
-margin: 0px;
-font-size: 1.2rem;
-font-family: arial;
-border: 0px;
+	padding: 0px;
+	margin: 0px;
+	font-size: 1.2rem;
+	font-family: arial;
+	border: 0px;
 }
 
 ul {
-list-style: none;
-padding: 0px;
-margin: 0px;
+	list-style: none;
+	padding: 0px;
+	margin: 0px;
 }
 
 a {
-color: #eeeeee;
-text-decoration: none;
-display: flex;
+	color: #eeeeee;
+	text-decoration: none;
+	display: flex;
 }
 
 
 /****************** navegação e menu ***************/
 
 .header {
-display: flex;
-justify-content: space-between;
-padding: 10px;
-align-items: center;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px;
+	align-items: center;
 }
 
 a:hover {
-color: #fd7014;
+	color: #fd7014;
 }
 
 header {
-margin: 0px;
-background-color: #222831;
+	margin: 0px;
+	background-color: #222831;
 }
 
 .logo {
-width: 40px;
-height: 40px;
+	width: 40px;
+	height: 40px;
 }
 
 .menu {
-display: flex;
+	display: flex;
 }
 
 .menu li {
-margin-left: 10px;
+	margin-left: 10px;
 }
 
 .menu li a {
-display:block;
-padding: 10px;
+	display:block;
+	padding: 10px;
 }
+
+
 
 /*********** Conteudo da página principal ********************/
 
 h2 {
-text-align: center;
+	text-align: center;
 }
 
 p {
-font-size: 1.2rem;
-text-align: justify;
+	font-size: 1.2rem;
+	text-align: justify;
 }
 
 .meta1 {
-background-color: #22222222;
-margin: 0px;
-padding: 20px 10% 20px 10%;
+	background-color: #22222222;
+	margin: 0px;
+	padding: 20px 10% 20px 10%;
 }
 
 .meta2 {
-background-color: #fd7014;
-margin: 0px;
-padding: 20px 10% 20px 10%;
+	background-color: #fd7014;
+	margin: 0px;
+	padding: 20px 10% 20px 10%;
 }
 
 .meta3 {
-background-color: #22222222;
-margin: 0px;
-padding: 20px 10% 20px 10%;
+	background-color: #22222222;
+	margin: 0px;
+	padding: 20px 10% 20px 10%;
 }
 
 .equipe {
-background-color: #393e46;
-margin: 0px;
-padding: 20px 10% 20px 10%;
-color: #eee;
+	background-color: #393e46;
+	margin: 0px;
+	padding: 20px 10% 20px 10%;
+	color: #eee;
+	
 }
 
-
-
-
-/************************ Roda pé geral  ***************************/
-
-
-footer {
-font-size: 1rem;
-color: #eeeeee;
-text-align: center;
-background-color: #222831;
-padding-top: 10px;
-padding-bottom: 10px;
+.alinhaequipe {
+	display: flex;
+	justify-content: space-evenly;
+	padding-bottom: 40px;
 }
 
-
-
-/**************************************************
-
-	PÁGINAS EM CONSTRUÇÃO
-
-**************************************************/
-
-
-.const {
-margin: 0px;
-text-align: center;
-padding-top: 30%;
-padding-bottom: 30%;
-color: #222831;
-background-color: #fd7014; 
+.fotoequipe {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
 /*************** Pagina de levantamentos ***********************/
 
-.estiloLev {
-background-color: #fd7014;
-margin: 0px;
-padding: 0px;
-width: 100%;
-height: 600px;
+.estiloCalc {
+	background-color: #fd7014;
+	margin: 0px;
+	padding: 0px;
+	width: 100%;
+	height: 600px;
 }
 
 .tituloConteiner {
-padding-top: 20px;
-color: white;
+	padding-top: 20px;
+	color: white;
 }
 
 .conteiner {
@@ -184,17 +156,17 @@ color: white;
 }
 
 .campos {
-padding-bottom: 20px;
-text-align: right;
+	padding-bottom: 20px;
+	text-align: right;
 }
 
 .conteudo {
-margin: 0px;
-align-items: center;
-text-align: center;
-padding: 20px;
-vertical-align: center;
-color: white;
+	margin: 0px;
+	align-items: center;
+	text-align: center;
+	padding: 20px;
+	vertical-align: center;
+	color: white;
 }
 
 input {
@@ -209,9 +181,49 @@ input {
 	background-color: #eee;
 	border-radius: 15px;
 	font-size: 20px;
+	margin: 20px;
 }
 
 .btnCalc:hover {
 	color: black;
 	background-color: #fd7014;
 }
+
+
+
+
+
+
+/**************************************************
+
+	PÁGINAS EM CONSTRUÇÃO
+
+**************************************************/
+
+
+.const {
+	margin: 0px;
+	text-align: center;
+	padding-top: 30%;
+	padding-bottom: 30%;
+	color: #222831;
+	background-color: #fd7014; 
+	}
+	
+	
+
+
+
+
+/************************ Roda pé geral  ***************************/
+
+
+footer {
+	font-size: 1rem;
+	color: #eeeeee;
+	text-align: center;
+	background-color: #222831;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+	
